--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
     <div id="survey-container">
-        <h1 class="text-3xl font-bold text-gray-800 mb-4">Complete Our Quick Survey</h1>
+        <h1 class="text-3xl font-bold text-gray-800 mb-4">Complete Our Quick Quiz</h1>
         <p class="text-lg text-gray-600 mb-6">Help us improve by sharing your feedback!</p>
         <button id="survey-btn" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">Take Survey</button>
     </div>
